--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -7,3 +7,5 @@
 @using Microsoft.JSInterop
 @using MarketMakingGame.Client
 @using MarketMakingGame.Client.Shared
+@using Blazored.LocalStorage;
+@using BlazorStrap
