--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -44,10 +44,10 @@
 height=32 />
   @AppService.UserDataViewModel.Data.DisplayName
 </MatButton>
-
-<p></p>
 <MatDivider/>
 <p></p>
+
+<use href="svg-cards.svg#heart_1" x="0" y="0"/>
 
 <BSJumbotron>
     <div class="form-group">
@@ -65,7 +65,7 @@ height=32 />
                     <li>@message</li>
                   }
                 </ul>
-  </BSJumbotron>
+</BSJumbotron>
 
 @code {
   private List<string> messages = new List<string>();
