--- a/Client/Pages/UserDataEditor.razor
+++ b/Client/Pages/UserDataEditor.razor
@@ -1,4 +1,4 @@
-@page "/UserDataEditor"
+@implements IDisposable
 @using MarketMakingGame.Client.Lib
 @inject AppService AppService
 
@@ -11,37 +11,41 @@
 <div class="mat-layout-grid">
   <div class="mat-layout-grid-inner">
     <div class="mat-layout-grid-cell-span mat-layout-grid-cell-span-2">
-      <img src=@(AvatarUrl) width=64 height=64 @onclick="AppService.UserDataViewModel.RefreshAvatar" class="avatar-cls"
-title="Click to change Avatar" />
+      <img src=@(AvatarUrl) width=64 height=64 @onclick="AppService.UserDataEditorViewModel.RefreshAvatar"
+class="avatar-cls" title="Click to change Avatar" />
     </div>
     <div class="mat-layout-grid-cell mat-layout-grid-cell-span-6">
-      <EditForm Model="AppService.UserDataViewModel">
+      <EditForm Model="AppService.UserDataEditorViewModel">
         <DataAnnotationsValidator />
-        <MatStringField Label="Display Name" @bind-Value="@AppService.UserDataViewModel.DisplayName" />
-        <ValidationMessage For="@(() => @AppService.UserDataViewModel.DisplayName)" style="font-size: x-small;" />
+        <MatStringField Label="Display Name" @bind-Value="@AppService.UserDataEditorViewModel.DisplayName" />
+        <ValidationMessage For="@(() => @AppService.UserDataEditorViewModel.DisplayName)" style="font-size: x-small;" />
       </EditForm>
     </div>
-
   </div>
 </div>
 
 @code {
-  string AvatarUrl
+  public string AvatarUrl
   {
     get
     {
-      return $"https://avatars.dicebear.com/api/gridy/{AppService.UserDataViewModel.AvatarSeed}.svg";
+      return $"https://avatars.dicebear.com/api/gridy/{AppService.UserDataEditorViewModel.AvatarSeed}.svg";
     }
   }
 
   protected override async Task OnInitializedAsync()
   {
-    AppService.UserDataViewModel.StateChanged += OnUserDataViewModelChanged;
+    AppService.UserDataEditorViewModel.StateChanged += OnUserDataViewModelChanged;
     await AppService.InitializeAsync();
   }
 
   void OnUserDataViewModelChanged(EventArgs e)
   {
     StateHasChanged();
+  }
+
+  public void Dispose()
+  {
+    AppService.UserDataEditorViewModel.StateChanged -= OnUserDataViewModelChanged;
   }
 }
