--- a/Client/Pages/UserDataEditor.razor
+++ b/Client/Pages/UserDataEditor.razor
@@ -1,38 +1,39 @@
 @implements IDisposable
 @using MarketMakingGame.Client.Lib
-@inject AppService AppService
+@inject AppViewModel AppViewModel
 
 <div class="mat-layout-grid">
   <div class="mat-layout-grid-inner">
     <div class="mat-layout-grid-cell-span mat-layout-grid-cell-span-2">
-      <img src="@AppService.UserDataEditorViewModel.AvatarUrl" width=64 height=64
-      @onclick="AppService.UserDataEditorViewModel.RefreshAvatar"
+      <img src="@ViewModel.AvatarUrl" width=64 height=64 @onclick="AppViewModel.UserDataEditorViewModel.RefreshAvatar"
 style="border-radius: 10%;border-style: dotted;border-width: thin;" title="Click to change Avatar" />
     </div>
     <div class="mat-layout-grid-cell mat-layout-grid-cell-span-6">
-      <EditForm Model="AppService.UserDataEditorViewModel">
+      <EditForm Model="AppViewModel.UserDataEditorViewModel">
         <DataAnnotationsValidator />
-        <MatStringField Label="Display Name" @bind-Value="@AppService.UserDataEditorViewModel.DisplayName" />
-        <ValidationMessage For="@(() => @AppService.UserDataEditorViewModel.DisplayName)" style="font-size: x-small;" />
+        <MatStringField Label="Display Name" @bind-Value="@ViewModel.DisplayName" />
+        <ValidationMessage For="@(() => @ViewModel.DisplayName)" style="font-size: x-small;" />
       </EditForm>
     </div>
   </div>
 </div>
 
 @code {
+  UserDataEditorViewModel ViewModel => AppViewModel.UserDataEditorViewModel;
+
   protected override async Task OnInitializedAsync()
   {
-    AppService.UserDataEditorViewModel.StateChanged += OnUserDataViewModelChanged;
-    await AppService.InitializeAsync();
+    ViewModel.StateChanged += OnViewModelChanged;
+    await AppViewModel.InitializeAsync();
   }
 
-  void OnUserDataViewModelChanged(EventArgs e)
+  void OnViewModelChanged(EventArgs e)
   {
     StateHasChanged();
   }
 
   public void Dispose()
   {
-    AppService.UserDataEditorViewModel.StateChanged -= OnUserDataViewModelChanged;
+    ViewModel.StateChanged -= OnViewModelChanged;
   }
 }
